<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="log_in">LOG IN</string>
    <string name="register">Register</string>
    <string name="restaurant_image_description">Restaurant Main Picture</string>
    <string name="card_txtview_1">Restaurant name</string>
    <string name="card_txtview_2">Endereço do restaurante</string>
    <string name="card_txtview_3">Horário de fechamento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_restaurant_details">Pratos principais</string>
    <string name="foto_principal_do_restaurante">Foto principal do restaurante</string>
    <string name="seta_para_voltar">Seta para voltar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="imagem_do_prato_selecionado">Imagem do prato selecionado</string>
    <string name="start_image">Start image</string>
</resources>