<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/roboto"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputLoginPassword"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="23dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/button_color"
        android:padding="10dp"
        android:text="@string/log_in"
        android:textSize="21sp"
        app:cornerRadius="3dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/roboto"
        android:textColor="#FF47525E"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="23dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/button_register_color"
        android:padding="10dp"
        android:text="@string/register"
        android:textSize="21sp"
        app:cornerRadius="3dp"/>

</LinearLayout>