<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".restaurants.RestaurantDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/imgRestaurantView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/foto_principal_do_restaurante" />

        <ImageView
            android:id="@+id/imgBackRestaurantDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/seta_para_voltar" />

        <TextView
            android:id="@+id/txtRestaurantView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="24dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/text_color_restaurant"
        android:text="@string/title_restaurant_details"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="19dp"/>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/pratos_card_view"
        android:id="@+id/pratosLista"/>

</LinearLayout>
</androidx.core.widget.NestedScrollView>